@@ -1,4 +1,5 @@
 import java.nio.ByteBuffer;
+import java.util.Date;
 import java.util.Calendar;
 import java.util.LinkedList;
 import java.util.Queue;
@@ -72,15 +73,19 @@ public class Frame {
     Calendar cal = Calendar.getInstance();
     StringBuilder sb = new StringBuilder();
     sb.append("Measurement: [ ");
+
     for (Measurement m : measurements) {
       if (m.getMeasurementId() == MeasurementId.TIME) {
+    	Date date = new Date();
         sb.append("time: ");
         try {
-          cal.setTimeInMillis(Long.valueOf(m.getValue().toString()));  
+            date = new Date(new Double(m.getValue()).longValue());
+         // cal.setTimeInMillis(Long.valueOf(m.getValue().toString()));  
         } catch (NumberFormatException nfe) {
           System.err.println("Failed to convert " + m.getValue() + " to milliseconds.");
         }
-        sb.append(FrameReader.DATE_FORMATTER.format(cal.getTime()));
+        sb.append(FrameReader.DATE_FORMATTER.format(date));
+      //  sb.append(m.getValue());
       } else {
         sb.append(", ");
         sb.append(m.toString());
